# cloude-phone

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: api-ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_p1a_extension_schema.py
apps/api/scripts/: make_invite.py  seed_profiles.py
apps/api/src/cloude_api/: config.py  db.py  enums.py  main.py
apps/api/src/cloude_api/api/: auth.py  device_profiles.py  devices.py  me.py  proxies.py  router.py
apps/api/src/cloude_api/core/: audit.py  auth.py  deps.py  encryption.py  rate_limit.py  security.py  stream_token.py
apps/api/src/cloude_api/models/: __init__.py  audit_log.py  base.py  device.py  device_file.py  device_profile.py  invite.py  proxy.py  session.py  snapshot.py  user.py
apps/api/src/cloude_api/schemas/: __init__.py  auth.py  device.py  device_file.py  device_profile.py  error.py  proxy.py  snapshot.py  user.py
apps/api/src/cloude_api/workers/: __init__.py  arq_settings.py  tasks.py
apps/api/src/cloude_api/ws/: __init__.py  pubsub.py  status.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_e2e_invite_to_running.py  test_extension_migration.py
apps/api/tests/unit/: test_auth_handlers.py  test_devices.py  test_encryption.py  test_extension_models.py  test_proxies.py  test_security.py  test_stream_token.py
apps/web/: Dockerfile  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  (+2 more)
docker/sidecar/: Dockerfile  dnscrypt-proxy.toml  entrypoint.sh  redsocks.conf.tpl
docs/: TESTING-P1A.md
scripts/p0/: build-sidecar.sh  check-vps.sh  cleanup.sh  prepare-vps.sh  spawn-pair.sh  spawn-redroid.sh  spawn-sidecar.sh  test-egress-via-proxy.sh  test-no-leak.sh  test-proxy-creds.sh  test-sidecar-healthy.sh
scripts/p1a/: test-stack.sh
(+14 files in other folders)
