[project]
name = "cloude-api"
version = "0.1.0"
description = "Cloud Android control plane API"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.110.3",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "sqlalchemy[asyncio]==2.0.30",
  "asyncpg==0.29.0",
  "alembic==1.13.1",
  "redis==5.0.4",
  "arq==0.25.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[argon2]==1.7.4",
  "argon2-cffi==23.1.0",
  "pynacl==1.5.0",
  "slowapi==0.1.9",
  "httpx==0.27.0",
  "python-multipart==0.0.9",
  "email-validator==2.1.1",
  "websockets==12.0",
  "anyio==4.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "ruff==0.4.4",
  "mypy==1.10.0",
  "types-python-jose==3.3.4.20240106",
  "types-passlib==1.7.7.20240327",
  "asgi-lifespan==2.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF", "ASYNC", "S"]
ignore = ["S101", "S104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]
"scripts/**" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["arq.*", "slowapi.*", "passlib.*", "nacl.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "integration: requires running postgres + redis (docker compose up)",
]
